src/test/ui/generic-associated-types/issue-71176.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-71176.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: missing generics for associated type `Provider::A`
  --> $DIR/issue-71176.rs:5:10
   |
LL |     type A<'a>;
   |          ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-71176.rs:5:10
   |
LL |     type A<'a>;
   |          ^ --
help: use angle brackets to add missing lifetime argument
   |
LL |     type A<'a><'a>;
   |           ^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0107`.
